test/expected/exit_bogus.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "exit" "hello world" "hello world"]
[Word
  Unquoted "exit"
]
[Word
  DoubleQuoted "hello world"
]
[Word
  DoubleQuoted "hello world"
]
shit: 2:1: error: Builtin 'exit': 'hello world' is not a valid integer.
     2 |  exit "hello world" "hello world"
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
